Stop automatically applying overflow:auto CSS to dropdown root node.
The dropdown should handle where the overflow:auto goes because it could
be on a descendant node rather than the root node,
thanks to Scrollable, LinearLayout, flex-box CSS, etc.

Also fixed the popup doc about how the popup indicates it was executed/canceled.

--- a/themes/common/classes.less
+++ b/themes/common/classes.less
@@ -53,15 +53,13 @@
 	.box-sizing(border-box);
 }
 
-// And then the popup itself gets this styling
+// And then the popup itself gets this styling.
+// Note that it needs to show a scrollbar if necessary, so it should set overflow:auto or extend Scrollable.
 .d-popup > * {
 	// we set the height and width on the wrapper, so the popup widget itself just needs to follow our lead
 	.box-sizing(border-box);
 	height: inherit;
 	width: inherit;
-
-	// and it needs to show a scrollbar if necessary
-	overflow: auto;
 }
 
 .d-tooltip-dialog-popup {
